--- a/src/app/pages/movies-list/movies-list.component.html
+++ b/src/app/pages/movies-list/movies-list.component.html
@@ -1,1 +1,3 @@
-<p>movies list will be displayed here</p>
+<div class="container">
+  <app-movie-item *ngFor="let movie of movies" [movie]="movie"></app-movie-item>
+</div>
