feat(step #2): implement movie list filter

--- a/src/app/pages/movies-list/movies-list.component.html
+++ b/src/app/pages/movies-list/movies-list.component.html
@@ -1,3 +1,7 @@
-<div class="container">
-  <app-movie-item *ngFor="let movie of movies" [movie]="movie"></app-movie-item>
+<div class="container mt-1">
+  <app-movie-filter (filterChange)="onFilterChange($event)"></app-movie-filter>
+  <app-movie-item
+    *ngFor="let movie of filtredMovies"
+    [movie]="movie"
+  ></app-movie-item>
 </div>
