--- a/src/app/components/movie-item/movie-item.component.html
+++ b/src/app/components/movie-item/movie-item.component.html
@@ -3,21 +3,23 @@
     <ul class="col-lg-12">
       <li>
         <h4>
-          {{ movie?.title }}
+          {{ movie.title }}
         </h4>
       </li>
     </ul>
     <div class="row">
       <span class="col-lg-4 fz-14"
-        >Release date : {{ movie?.release_date }}</span
+        >Release date : {{ movie.release_date }}</span
       >
-      <span class="col-lg-4 fz-14">Budget : {{ movie?.budget! | budget }}</span>
+      <span class="col-lg-4 fz-14">Budget : {{ movie.budget! | budget }}</span>
       <span class="col-lg-4 fz-14"
-        >Duration : {{ movie?.duration! | duration }}</span
+        >Duration : {{ movie.duration! | duration }}</span
       >
     </div>
   </div>
   <div class="col-lg-2">
-    <button id="{{ movie?.id }}">Details</button>
+    <button id="{{ movie.id }}" (click)="navigateToMovieDetails(movie.id)">
+      Details
+    </button>
   </div>
 </div>
