fix(step #3):  types of methods and vars && change id to movieId

--- a/src/app/pages/movie-details/movie-details.component.html
+++ b/src/app/pages/movie-details/movie-details.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-4">
+<div class="container mt-4" *ngIf="movieDetails">
   <div class="row">
     <div class="col-lg-3"></div>
     <h1 class="col-lg-5">{{ movieDetails.title }}</h1>
