--- a/src/app/components/movie-item/movie-item.component.html
+++ b/src/app/components/movie-item/movie-item.component.html
@@ -1,4 +1,4 @@
-<div class="row mt-1">
+<div class="row mt-1" *ngIf="movie">
   <div class="col-lg-6">
     <ul class="col-lg-12">
       <li>
@@ -11,7 +11,7 @@
       <span class="col-lg-4 fz-14"
         >Release date : {{ movie.release_date }}</span
       >
-      <span class="col-lg-4 fz-14">Budget : {{ movie.budget! | budget }}</span>
+      <span class="col-lg-4 fz-14">Budget : {{ movie.budget | budget }}</span>
       <span class="col-lg-4 fz-14"
         >Duration : {{ movie.duration! | duration }}</span
       >
